# timejournal

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
tests/: test_returns.py
timejournal/: cli.py
tj/: cli.py
